Added book & article choices to selector.html

--- a/src/templates/selector.html
+++ b/src/templates/selector.html
@@ -1,2 +1,7 @@
 <!DOCTYPE html>
 <title>Select reference type</title>
+
+<p>
+    <input type="radio" name="reftype" value="1"> Book
+    <input type="radio" name="reftype" value="2"> Article
+<p>
