--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -7,5 +7,11 @@
     <p>
     References
     <br>
+    <form method="POST" action="/selector">
+        <select name="reference_type" required>
+            <option value="book">Book</option>
+        </select>
+        <input type="submit" value="Submit"
+    </form>
 </body>
 
