--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -11,7 +11,7 @@
         <select name="reference_type" required>
             <option value="book">Book</option>
         </select>
-        <input type="submit" value="Submit"
+        <input type="submit" value="Submit">
     </form>
 </body>
 
