Link to selector added to front page

--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -4,14 +4,6 @@
 
 <body>
     <h2>Front Page</h2>
-    <p>
-    References
-    <br>
-    <form method="POST" action="/selector">
-        <select name="reference_type" required>
-            <option value="book">Book</option>
-        </select>
-        <input type="submit" value="Submit">
-    </form>
+    <a href="/selector">To selector</a>
 </body>
 
