--- a/src/templates/new_book_reference.html
+++ b/src/templates/new_book_reference.html
@@ -1,12 +1,12 @@
 {% extends "layout.html" %}
 
 {% block title %}
-Add new book reference
+Add a new book reference | References
 {% endblock %}
 
 {% block body %}
 
-<h2>Add new book reference</h2>
+<h2>Add a new book reference</h2>
 
 <form action="/add_book_reference" method="POST">
     <p>Author(s):<br>
