Make selecting option required

--- a/src/templates/selector.html
+++ b/src/templates/selector.html
@@ -10,7 +10,7 @@ Select reference type | References
 
 <p>
     <form method="POST" action="/redirect">
-        <input type="radio" name="reftype" value="/add_book_reference"> Book
+        <input type="radio" name="reftype" value="/add_book_reference" required title="Please select one"> Book
         <!-- <input type="radio" name="reftype" value="2"> Article -->
         <input type="submit" value="Submit">    
     </form>
