Added viewable list of references

--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -9,5 +9,6 @@ Front Page | References
 <h2>References</h2>
 
 <a href="/selector">Add a new reference</a>
-
+<br>
+<a href="/list_of_references">View list of references</a>
 {% endblock %}
