--- a/src/templates/list_of_references.html
+++ b/src/templates/list_of_references.html
@@ -1,7 +1,7 @@
 {% extends "layout.html" %}
 
 {% block title %}
-Add a new book reference | References
+List of references | References
 {% endblock %}
 
 {% block body %}
