Added CSS for selector.html

--- a/src/templates/selector.html
+++ b/src/templates/selector.html
@@ -1,3 +1,7 @@
+<head>
+    <link rel="stylesheet" href="{{ url_for('static', filename='styles/selector.css') }}">
+</head>
+
 {% extends "layout.html" %}
 
 {% block title %}
