Added CSS for list_of_references.html, changed the font of the authors input field to Arial

--- a/src/templates/list_of_references.html
+++ b/src/templates/list_of_references.html
@@ -1,3 +1,7 @@
+<head>
+    <link rel="stylesheet" href="{{ url_for('static', filename='styles/list_of_references.css') }}">
+</head>
+
 {% extends "layout.html" %}
 
 {% block title %}
