--- a/src/templates/list_of_references.html
+++ b/src/templates/list_of_references.html
@@ -14,6 +14,7 @@ List of references | References
 
 {% if references %}
 <span id="references">
+<!-- Placeholder starts here -->
 {% if view %}
 {% for i in references %}
     title = {{i.title}}, <br>
@@ -23,6 +24,7 @@ List of references | References
      <br>
 {% endfor %}
 {% else %}
+<!-- Placeholder ends here -->
 {% for i in references %}
     {{i.title}}, {{i.author}}, {{i.year}}, {{i.publisher}}
      <br>
