Add ref key and keyword section to new book ref form

--- a/src/templates/new_book_reference.html
+++ b/src/templates/new_book_reference.html
@@ -25,6 +25,12 @@ Add a new book reference | References
     <p>Publisher:<br>
         <input type="text" name="publisher" placeholder="Enter publisher name" required>
     </p>
+    <p>Reference key:<br>
+        <input type="text" name="reference_key" placeholder="Enter reference key" required>
+    </p>
+    <p>Keyword(s):<br>
+        <textarea rows="4" cols="30" type="text" name="keywords" placeholder="(Optional) Enter keyword(s), separate keywords by commas (,)"></textarea>
+    </p>
     <input type="submit" value="Submit">
 </form>
 
