--- a/src/templates/selector.html
+++ b/src/templates/selector.html
@@ -13,7 +13,7 @@ Select reference type | References
 <h2>Select reference type</h2>
 
 <p>
-    <form method="POST" action="/redirect">
+    <form method="POST" action="/selector">
         <input type="radio" name="reftype" value="/add_book_reference" required title="Please select one"> Book
         <!-- <input type="radio" name="reftype" value="2"> Article -->
         <input type="submit" value="Submit">    
