--- a/src/templates/delete.html
+++ b/src/templates/delete.html
@@ -10,16 +10,19 @@ Delete Reference | References
 
 {% block body %}
 
-Are you sure you want to delete this reference?
-{{reference.title}}, {{reference.author}}, {{reference.year}}, {{reference.publisher}} 
+<h2>Are you sure you want to delete this reference?</h2>
+<h3>{{reference.title}}, {{reference.author}}, {{reference.year}}, {{reference.publisher}} </h3>
 
-<div class="buttons">
-    <form action="/delete" method="POST">
-        <input type="hidden" name="id" value="{{reference.id}}">
-        <input type="hidden" name="confirmed" value="1">
-        <input type="submit" title="Yes" value="Yes">
-    </form>
-    <a href="/list_of_references" class="button">No</a>
-</div>
+
+<form action="/delete" method="POST">
+    <input type="hidden" name="id" value="{{reference.id}}">
+    <input type="hidden" name="confirmed" value="1">
+    <div class="buttons">
+        <input type="submit" title="Delete" value="Delete">
+        <a href="/list_of_references" class="button">Cancel</a>
+    </div>
+</form>
+
+
 
 {% endblock %}
