--- a/src/static/styles/edit.css
+++ b/src/static/styles/edit.css
@@ -1,1 +1,84 @@
-/* TODO
+h2{
+    font-size: 35;
+    color: white;
+    padding-top: 2%;
+    padding-bottom: 2%;
+    margin: 0px;
+    text-align: center;
+}
+
+body {
+    background-color: #342e58;
+    display: flex;  
+    justify-content: center; 
+    align-items: center;
+    flex-direction: column;
+    font-family: Arial, sans-serif;
+    height: 80%; 
+}
+
+p{
+    margin: 0;
+}
+
+textarea{
+    font-family: Arial, sans-serif;
+    width: 240px;
+}
+
+form {
+    display: flex;
+    flex-direction: column;
+    align-items: center; 
+    justify-content: center;
+    color: white;
+    font-family: Arial, sans-serif;
+    padding: 0px;
+    margin: 0px;
+    gap: 15px;
+    width: 50%;
+}
+
+input[type="submit"] {
+    margin-right: 10px; 
+    padding: 10px 15px; 
+    text-decoration: none;
+    color: black; 
+    background-color: rgb(100, 255, 100); 
+    border: 2px solid rgb(44, 44, 44);
+    border-radius: 10px;
+    transition: transform 0.1s, background-color 0.1s;
+    font-size: 15;  
+}
+
+.inputwidth{
+    width: 240px;
+}
+
+input[type="submit"]:hover{
+    background-color: rgb(90, 230, 90); 
+    transform: scale(1.025);
+    cursor: pointer;
+}
+
+a{
+    padding: 10px 15px; 
+    text-decoration: none;
+    color: white; 
+    background-color: rgb(255, 80, 80); 
+    border: 2px solid rgb(44, 44, 44);
+    border-radius: 10px;
+    transition: transform 0.1s, background-color 0.1s;
+}
+
+a:hover{
+    background-color: rgb(230, 70, 70);
+    transform: scale(1.025);
+    cursor: pointer;
+}
+
+.buttons {
+    display: flex;
+    position: relative;
+    font-size: 15;  
+}
