--- a/src/static/styles/list_of_references.css
+++ b/src/static/styles/list_of_references.css
@@ -14,6 +14,47 @@ h2{
     color: white;
 }
 
+.reference{
+    display: flex;
+    flex-direction: row;
+    align-items: center; 
+    vertical-align: middle;
+    text-align: center;
+}
+
+
+form{
+    margin: 0;
+    padding: 0;
+}
+
+.button{
+    margin-left: 6px;
+    padding: 6px 9px; 
+    text-decoration: none;
+    color: black; 
+    background-color: white; 
+    border: 2px solid rgb(44, 44, 44);
+    border-radius: 10px;
+    transition: transform 0.1s, background-color 0.1s;
+}
+.button:hover{
+    transform: scale(1.025);
+    cursor: pointer;
+}
+
+.delete{
+    background-color: rgb(255, 80, 80);
+}
+
+.delete:hover{
+    background-color: rgb(230, 70, 70);
+}
+
+.edit:hover{
+    background-color: #e8e8e8;
+}
+
 a{
     position: absolute;
     top: 0;
