Updated the validation regex to match the database's constraint

--- a/src/templates/edit.html
+++ b/src/templates/edit.html
@@ -40,9 +40,8 @@ Edit Reference | References
     
 </form>
 
-
 <script>
-    const regex = /^[a-zA-Z0-9\-_]*$/;
+    const regex = /^[a-zA-Z0-9\-._]*$/;
     document.querySelector("body > form").addEventListener('submit', function(event) {
         let refKey = document.querySelector('input[name="reference_key"]').value;
         if(!regex.test(refKey)){
