--- a/src/templates/delete.html
+++ b/src/templates/delete.html
@@ -18,7 +18,7 @@ Delete Reference | References
     <input type="hidden" name="id" value="{{reference.id}}">
     <input type="hidden" name="confirmed" value="1">
     <div class="buttons">
-        <input type="submit" title="Delete" value="Delete">
+        <input type="submit" class="button delete" title="Delete" value="Delete">
         <a href="/list_of_references" class="button">Cancel</a>
     </div>
 </form>
