--- a/src/templates/selector.html
+++ b/src/templates/selector.html
@@ -16,7 +16,7 @@ Select reference type | References
     <form method="POST" action="/selector">
         <input type="radio" name="reftype" value="/add_book_reference" required title="Please select one"> Book
         <!-- <input type="radio" name="reftype" value="2"> Article -->
-        <input type="submit" value="Submit">    
+        <input type="submit" class="button" value="Submit">    
     </form>
 </p>
 
