--- a/src/static/styles/list_of_references.css
+++ b/src/static/styles/list_of_references.css
@@ -1,5 +1,5 @@
 body {
-    background-color: #342e58;
+    background-color: hsl(255 27 23);
     display: flex;  
     justify-content: center; 
     align-items: center;
@@ -22,7 +22,6 @@ h2{
     text-align: center;
 }
 
-
 form{
     margin: 0;
     padding: 0;
@@ -32,45 +31,44 @@ form{
     margin-left: 6px;
     padding: 6px 9px; 
     text-decoration: none;
-    color: black; 
-    background-color: white; 
-    border: 2px solid rgb(44, 44, 44);
+    color: white; 
+    background-color: hsl(256 22 13); 
+    border: 1px solid hsl(256 22 95); 
     border-radius: 10px;
-    transition: transform 0.1s, background-color 0.1s;
-}
-.button:hover{
-    transform: scale(1.025);
-    cursor: pointer;
+    transition: transform 0.2s, background-color 0.2s, color 0.2s;
 }
 
-.delete{
-    background-color: rgb(255, 80, 80);
-}
-
-.delete:hover{
-    background-color: rgb(230, 70, 70);
-}
-
-.edit:hover{
-    background-color: #e8e8e8;
-}
-
-a{
+.home{
     position: absolute;
     top: 0;
     left: 0; 
     margin: 10px 10px 10px 10px;
     padding: 10px 15px; 
-    text-decoration: none;
-    color: black; 
-    background-color: white; 
-    border: 2px solid rgb(44, 44, 44);
-    border-radius: 10px;
-    transition: transform 0.1s, background-color 0.1s;
 }
 
-a:hover{
-    background-color: #e8e8e8;
+.button:hover{
+    background-color: hsl(256 22 95); 
+    color: hsl(256 22 13); 
     transform: scale(1.025);
     cursor: pointer;
 }
+.button:active{
+    background-color: hsl(256 22 90); 
+    color: hsl(256 22 13); 
+    transform: scale(0.975);
+}
+
+.delete{
+    border: 1px solid hsl(0 100 66); 
+}
+
+.delete:hover{
+    background-color: hsl(0 100 66);
+    color: white;
+}
+
+.delete:active{
+    background-color: hsl(0 100 55);
+    color: white;
+}
+
