added go to front page button to selector

--- a/src/static/styles/selector.css
+++ b/src/static/styles/selector.css
@@ -38,3 +38,10 @@ form {
     color: hsl(256 22 13); 
     transform: scale(0.975);
 }
+
+a{
+    position: absolute;
+    top: 0;
+    left: 0; 
+    margin: 10px 10px 10px 10px;
+}
