fix copying, editing, deleting in biblex format

--- a/src/templates/list_of_references.html
+++ b/src/templates/list_of_references.html
@@ -19,9 +19,9 @@ List of references | References
     
         {% if toggle == "on" %}
         <!-- Copy button code from here -->
-        <div id="bibtex-{{ i.id }}">
+        <div id="bibtex-{{ i.id }}" class="bibtex-container">
             <!-- to here -->
-        <pre>{{i}}</pre> <br>
+        <pre>{{i.text}}</pre>
         <!-- Copy button code from here -->
     </div>
     <br/>
