--- a/src/static/styles/list_of_references.css
+++ b/src/static/styles/list_of_references.css
@@ -5,8 +5,9 @@ body {
     align-items: center;
     flex-direction: column;
     font-family: Arial, sans-serif;
-    height: 50%; 
+    min-height: 50%;
     color: white;
+    overflow-y: auto;
 }
 
 h2{
